# ray-tracing

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
pkg/: CMakeLists.txt
pkg/arch/: PKGBUILD
pkg/ubuntu/: CMakeLists.txt
src/: CMakeLists.txt  arguments.cpp  arguments.hpp  camera.cpp  camera.hpp  embree.hpp  hittable.hpp  hittable_list.cpp  hittable_list.hpp  lambertian.hpp  main.cpp  material.hpp  mesh.cpp  mesh.hpp  metal.hpp  print.hpp  quad.cpp  quad.hpp  ray.cpp  ray.hpp  rtweekend.cpp  rtweekend.hpp  scene.cpp  scene.hpp  sphere.cpp  sphere.hpp
src/material/: CMakeLists.txt  dielectric.cpp  dielectric.hpp  diffuse_light.cpp  diffuse_light.hpp  lambertian.cpp  lambertian.hpp  material.cpp  material.hpp  metal.cpp  metal.hpp
